LayoutTests/http/tests/security/cross-origin-reified-window-property-access-expected.txt
CONSOLE MESSAGE: line 16: Blocked a frame with origin "http://127.0.0.1:8000" from accessing a frame with origin "http://localhost:8000". Protocols, domains, and ports must match.
CONSOLE MESSAGE: line 16: Blocked a frame with origin "http://127.0.0.1:8000" from accessing a frame with origin "http://localhost:8000". Protocols, domains, and ports must match.
CONSOLE MESSAGE: line 16: Blocked a frame with origin "http://127.0.0.1:8000" from accessing a frame with origin "http://localhost:8000". Protocols, domains, and ports must match.
Tests that reification does not bypass cross-origin checks.

On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".


PASS crossOriginWindow.document returned undefined.
PASS crossOriginWindow.name returned undefined.
PASS crossOriginWindow.menubar returned undefined.
PASS crossOriginWindow.scrollbars") threw exception SyntaxError: Unexpected EOF.
PASS crossOriginWindow.navigator") threw exception SyntaxError: Unexpected EOF.
PASS crossOriginWindow.screenX") threw exception SyntaxError: Unexpected EOF.
PASS crossOriginWindow.location is not undefined
PASS crossOriginWindow.self is crossOriginWindow.window
PASS sameOriginWindow.self is "secret"
PASS crossOriginWindow.parent is window
PASS sameOriginWindow.parent is sameOriginWindow.document.getElementById("parent")
PASS successfullyParsed is true

TEST COMPLETE
 
